tests/compile_tests/overflow.stderr
error: literal out of range for `u8`
 --> $DIR/overflow.rs:9:15
  |
9 |     OverMax = 256,
  |               ^^^
  |
note: the lint level is defined here
 --> $DIR/overflow.rs:1:9
  |
1 | #![deny(overflowing_literals)]
  |         ^^^^^^^^^^^^^^^^^^^^
